--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,16 @@
-name: Run Neofetch
+name: Run Docker Hello World
 
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 120
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Run Neofetch
+    - name: Run Docker Hello World
       run: |
-        sudo apt-get update
-        sudo apt-get install -y neofetch
-        neofetch
+        docker run hello-world
