--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,27 @@
-name: Run Docker Hello World
+name: Run Tomcat and Access it
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  build:
+  run-tomcat:
     runs-on: ubuntu-latest
-    timeout-minutes: 120
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Run Docker Hello World
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Run Tomcat container
       run: |
-        docker run hello-world
+        docker pull tomcat:latest
+        docker run -d --name tomcat -p 8080:8080 tomcat:latest
+
+    - name: Check running containers
+      run: docker ps
+
+    - name: Get runner IP address
+      run: |
+        echo "Runner IP:"
+        curl ifconfig.me
