--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,12 @@ jobs:
         echo "Runner IP:"
         curl ifconfig.me
 
+    - name: NGROK
+      uses: tmshkr/ngrok-ssh@latest
+      with:
+        NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
+        NGROK_CONFIG_FILE: "ngrok.yml"
+
     - name: Keep the workflow running
       run: |
         echo "Entering infinite loop to keep the workflow running..."
