--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,10 @@ jobs:
         && sudo apt update \
         && sudo apt install ngrok
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
-        ngrok http http://localhost:8080 &
+        ngrok http -config=./ngrok.yml http://localhost:8080 &
+
+    - name: Check current directory
+      run: ls -la
 
     - name: Check running containers
       run: docker ps
@@ -36,11 +39,6 @@ jobs:
       run: |
         echo "Runner IP:"
         curl ifconfig.me
-
-    #- name: NGROK
-    #  uses: tmshkr/ngrok-ssh@latest
-    #  with:
-    #    NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
     - name: Keep the workflow running
       run: |
