--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         && sudo apt update \
         && sudo apt install ngrok
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
-        ngrok http --region=ap --ngrok-skip-browser-warning http://localhost:8080 &
+        ngrok http --region=ap http://localhost:8080 &
 
     - name: Open ngrok ssh
       id: ngrok
