--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,14 @@ name: Run Tomcat and Keep Workflow Running
 on: [push, pull_request]
 
 jobs:
-  run-tomcat:
+  start-server:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
+    - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
     - name: Run Tomcat container
@@ -28,19 +28,14 @@ jobs:
         && sudo apt install ngrok
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
 
-    - name: Start ngrok ssh
+    - name: Start ngrok SSH
       id: ngrok
       uses: tmshkr/ngrok-ssh@latest
       with:
         NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
-    - name: Start ngrok tomcat
+    - name: Start ngrok Tomcat forward
       run: ngrok http --region=ap http://localhost:8080 &
 
-    - name: Use SSH port
-      run: echo "The public port of the SSH server is ${{ steps.ngrok.outputs.SSH_PORT }}"
-
-    - name: Keep the workflow running
-      run: |
-        echo "Entering infinite loop to keep the workflow running..."
-        while true; do sleep 1000; done
+    - name: Wait time for testing
+      run: sleep 300
