--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
     - name: Start ngrok Tomcat forward
-      run: ngrok start --all &
+      run: ngrok http --region=ap http://localhost:8080 &
 
     - name: Wait time for testing
       run: sleep 300
