--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install dependencies
+      run: |
+        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc \
+        | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null \
+        && echo "deb https://ngrok-agent.s3.amazonaws.com buster main" \
+        | sudo tee /etc/apt/sources.list.d/ngrok.list \
+        && sudo apt update \
+        && sudo apt install ngrok
+        ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
+
     - name: Checkout repository
       uses: actions/checkout@v2
 
@@ -20,24 +30,22 @@ jobs:
         docker pull tomcat:latest
         docker run -d --name tomcat -p 8080:8080 tomcat:latest
 
-    - name: Install ngrok
+    - name: Run MSSQL container
       run: |
-        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc \
-        | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null \
-        && echo "deb https://ngrok-agent.s3.amazonaws.com buster main" \
-        | sudo tee /etc/apt/sources.list.d/ngrok.list \
-        && sudo apt update \
-        && sudo apt install ngrok
-        ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
+        docker pull mcr.microsoft.com/mssql/server
+        docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=${{ secrets.SQLPASSWORD }}" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
 
-    - name: Start ngrok SSH
+    - name: Run ngrok SSH
       id: ngrok
       uses: tmshkr/ngrok-ssh@latest
       with:
         NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
-    - name: Start ngrok Tomcat forward
+    - name: Run ngrok forward ports
       run: ngrok http --region=ap http://localhost:8080 &
+
+    - name: Check running containers
+      run: docker ps
 
     - name: Wait time for testing
       run: sleep 300
