Tree: move tomcat server

--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -2,7 +2,7 @@ name: Run Tomcat and Keep Workflow Running
 concurrency:
   group: ${{ github.workflow }}
 
-on: [push, pull_request]
+#on: [push, pull_request]
 
 jobs:
   start-server:
