--- a/server/tomcat/nbproject/private/private.properties
+++ b/server/tomcat/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=/home/slightlywind/.netbeans/21/tomcat101.properties
 j2ee.server.home=/usr/share/tomcat10
 j2ee.server.instance=tomcat101:home=/usr/share/tomcat10
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/slightlywind/.netbeans/21/build.properties
