--- a/server/tomcat/build.xml
+++ b/server/tomcat/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="server" default="default" basedir=".">
-    <description>Builds, tests, and runs the project server.</description>
+<project name="tomcat" default="default" basedir=".">
+    <description>Builds, tests, and runs the project tomcat.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
