--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -2,7 +2,7 @@ name: Run Tomcat and Keep Workflow Running
 concurrency:
   group: ${{ github.workflow }}
 
-#on: [push, pull_request]
+on: [push, pull_request]
 
 jobs:
   start-server:
@@ -18,34 +18,46 @@ jobs:
         && sudo apt update \
         && sudo apt install ngrok
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
-
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
-    - name: Run Tomcat container
-      run: |
-        docker pull tomcat:latest
-        docker run -d --name tomcat -p 8080:8080 tomcat:latest
-
     - name: Run MSSQL container
       run: |
         docker pull mcr.microsoft.com/mssql/server
-        docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=${{ secrets.SQLPASSWORD }}" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
+        docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=YourStrong@Passw0rd" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
+        sleep 10
+        sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -Q "ALTER LOGIN [sa] WITH PASSWORD= '${{ secrets.SQLPASSWORD }}', CHECK_POLICY = OFF"
+        
+    - name: Run Tomcat container
+      run: |
+        docker pull tomcat:latest
+        docker run -d --name tomcat -p 8080:8080 -e "MSSQL_PASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
+        docker cp ./server/tomcat/dist/*.war `docker ps -q --filter ancestor=tomcat`:/usr/local/tomcat/webapps/
+        docker restart `docker ps -q --filter ancestor=tomcat`
+
+    - name: Create database
+      run: | 
+        echo "creating database"
+        sqlcmd -S localhost -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/reset.sql
+        echo "creating tables"
+        sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/table.sql
+        echo "creating procedures"
+        sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/procedure.sql
+        echo "inserting data"
+        sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/insert.sql
 
     - name: Run ngrok SSH
       id: ngrok
       uses: tmshkr/ngrok-ssh@latest
       with:
+        SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
         NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
     - name: Run ngrok forward ports
       run: ngrok http --region=ap http://localhost:8080 &
 
-    - name: Check running containers
-      run: docker ps
-
-    - name: Wait time for testing
-      run: sleep 300
+    #- name: Wait time for testing
+    #  run: sleep 900
