--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -59,8 +59,12 @@ jobs:
         SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
         NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
-    - name: Run ngrok forward ports
-      run: ngrok http --region=ap http://localhost:8080 &
+
+    - name: Start code-server Docker container
+      run: docker run -d -p 8443:8443 codercom/code-server:latest --auth none
+
+    - name: Run ngrok to forward code-server port
+      run: ngrok http --region=ap http://localhost:8443 &
 
     - name: Wait time for testing
       run: sleep 900
