--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -21,22 +21,28 @@ jobs:
         && sudo apt update \
         && sudo apt install ngrok
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
+
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
-    - name: Run MSSQL container
+    - name: Docker setup
       run: |
         docker pull mcr.microsoft.com/mssql/server
+        docker pull tomcat:latest
+        echo '{ "exec-opts": ["native.cgroupdriver=cgroupfs"], "cgroup-parent": "/actions_job", "features": { "dns-host": true } }' | sudo tee /etc/docker/daemon.json
+        sudo systemctl restart docker
+
+    - name: Run MSSQL container
+      run: |
         docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=YourStrong@Passw0rd" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
         sleep 5
         sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -Q "ALTER LOGIN [sa] WITH PASSWORD= '${{ secrets.SQLPASSWORD }}', CHECK_POLICY = OFF"
         
     - name: Run Tomcat container
       run: |
-        docker pull tomcat:latest
         docker run -d --name tomcat -p 8080:8080 -e "MSSQL_PASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
         mv ./server/tomcat/dist/*.war ./server/tomcat/dist/ROOT.war
         docker cp ./server/tomcat/dist/ROOT.war `docker ps -q --filter ancestor=tomcat`:/usr/local/tomcat/webapps/
