--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -1,4 +1,4 @@
-name: Run Tomcat and Keep Workflow Running
+name: Start Server
 concurrency:
   group: ${{ github.workflow }}
 
@@ -28,25 +28,33 @@ jobs:
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
-    - name: Docker setup
+    - name: Set up Docker
       run: |
         docker pull mcr.microsoft.com/mssql/server
         docker pull tomcat:latest
-        echo '{ "exec-opts": ["native.cgroupdriver=cgroupfs"], "cgroup-parent": "/actions_job", "features": { "dns-host": true } }' | sudo tee /etc/docker/daemon.json
-        sudo systemctl restart docker
 
     - name: Run MSSQL container
       run: |
-        docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=YourStrong@Passw0rd" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
+        docker run --network host -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=YourStrong@Passw0rd" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
         sleep 5
         sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -Q "ALTER LOGIN [sa] WITH PASSWORD= '${{ secrets.SQLPASSWORD }}', CHECK_POLICY = OFF"
         
     - name: Run Tomcat container
       run: |
-        docker run -d --name tomcat -p 8080:8080 -e "MSSQL_PASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
+        docker run  --network host -d --name tomcat -p 8080:8080 -e "MSSQL_PASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
         mv ./server/tomcat/dist/*.war ./server/tomcat/dist/ROOT.war
         docker cp ./server/tomcat/dist/ROOT.war `docker ps -q --filter ancestor=tomcat`:/usr/local/tomcat/webapps/
         docker restart `docker ps -q --filter ancestor=tomcat`
+
+    - name: Run ngrok SSH
+      id: ngrok
+      uses: tmshkr/ngrok-ssh@latest
+      with:
+        SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+        NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
+
+    - name: Run ngrok to forward code-server port
+      run: ngrok http --region=ap http://localhost:8080 &
 
     - name: Create database
       run: | 
@@ -58,16 +66,6 @@ jobs:
         sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/procedure.sql
         echo "inserting data"
         sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/insert.sql
-
-    - name: Run ngrok SSH
-      id: ngrok
-      uses: tmshkr/ngrok-ssh@latest
-      with:
-        SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
-        NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
-
-    - name: Run ngrok to forward code-server port
-      run: ngrok http --region=ap http://localhost:8080 &
 
     - name: Show tomcat Logs
       run: docker logs -f `docker ps -q --filter ancestor=tomcat`
