--- a/.github/workflows/start-server-default-password.yml
+++ b/.github/workflows/start-server-default-password.yml
@@ -1,4 +1,4 @@
-name: Start Server with Default MSSQL Password
+name: Start Server with Default Password
 concurrency:
   group: ${{ github.workflow }}
 
