--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -43,7 +43,7 @@ jobs:
         
     - name: Run Tomcat container
       run: |
-        docker run --network host -d --name tomcat -p 8080:8080 -e "SQL_PASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
+        docker run --network host -d --name tomcat -p 8080:8080 -e "SQLPASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
         mv ./server/tomcat/dist/*.war ./server/tomcat/dist/ROOT.war
         docker cp ./server/tomcat/dist/ROOT.war `docker ps -q --filter ancestor=tomcat`:/usr/local/tomcat/webapps/
         docker restart `docker ps -q --filter ancestor=tomcat`
