--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -1,6 +1,8 @@
-name: Run Tomcat and Keep Workflow Running
+name: Start Server
+
 concurrency:
   group: ${{ github.workflow }}
+  cancel-in-progress: true
 
 on: 
   workflow_dispatch:
@@ -21,25 +23,42 @@ jobs:
         && sudo apt update \
         && sudo apt install ngrok
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
+
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
-    - name: Run MSSQL container
+    - name: Set up Docker
       run: |
         docker pull mcr.microsoft.com/mssql/server
-        docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=YourStrong@Passw0rd" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
+        docker pull tomcat:latest
+
+    - name: Run MSSQL container
+      run: |
+        docker run --network host -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=YourStrong@Passw0rd" -p 1433:1433 -d mcr.microsoft.com/mssql/server:latest
         sleep 10
         sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -Q "ALTER LOGIN [sa] WITH PASSWORD= '${{ secrets.SQLPASSWORD }}', CHECK_POLICY = OFF"
         
     - name: Run Tomcat container
       run: |
-        docker pull tomcat:latest
-        docker run -d --name tomcat -p 8080:8080 -e "MSSQL_PASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
-        docker cp ./server/tomcat/dist/*.war `docker ps -q --filter ancestor=tomcat`:/usr/local/tomcat/webapps/
+        docker run --network host -d --name tomcat -p 8080:8080 -e "SQLPASSWORD=${{ secrets.SQLPASSWORD }}" tomcat:latest
+        mv ./server/tomcat/dist/*.war ./server/tomcat/dist/ROOT.war
+        docker cp ./server/tomcat/dist/ROOT.war `docker ps -q --filter ancestor=tomcat`:/usr/local/tomcat/webapps/
         docker restart `docker ps -q --filter ancestor=tomcat`
+      env:
+        SQLPASSWORD: ${{ secrets.SQLPASSWORD }}
+
+    - name: Run ngrok SSH
+      id: ngrok
+      uses: tmshkr/ngrok-ssh@latest
+      with:
+        SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+        NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
+
+    - name: Run ngrok to forward code-server port
+      run: ngrok http --region=ap http://localhost:8080 &
 
     - name: Create database
       run: | 
@@ -52,15 +71,5 @@ jobs:
         echo "inserting data"
         sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/insert.sql
 
-    - name: Run ngrok SSH
-      id: ngrok
-      uses: tmshkr/ngrok-ssh@latest
-      with:
-        SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
-        NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
-
-    - name: Run ngrok forward ports
-      run: ngrok http --region=ap http://localhost:8080 &
-
-    #- name: Wait time for testing
-    #  run: sleep 900
+    - name: Show tomcat Logs
+      run: docker logs -f `docker ps -q --filter ancestor=tomcat`
