Multiple Changes Merged UserDao and User to User Code optimization and format Updated .gitignore
!!! NOT TESTED

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,19 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+temp.sql
+
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+# Package Files #
+*.ear
