--- a/server/tomcat/nbproject/project.properties
+++ b/server/tomcat/nbproject/project.properties
@@ -27,7 +27,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.mail-api.jar=libraries/jakarta.mail-api.jar
+file.reference.jakarta.activation-api-2.1.3.jar=libraries/jakarta.activation-api-2.1.3.jar
+file.reference.jakarta.mail-2.0.3.jar=libraries/jakarta.mail-2.0.3.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libraries/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libraries/jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=libraries/jaxb-api-2.1.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.jakarta.mail-api.jar}
+    ${file.reference.jakarta.activation-api-2.1.3.jar}:\
+    ${file.reference.jakarta.mail-2.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
