--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on: 
   workflow_dispatch:
-  push:
+  #push:
   #pull_request:
 
 jobs:
@@ -23,6 +23,19 @@ jobs:
         && sudo apt update \
         && sudo apt install ngrok
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
+
+    #- name: Run ngrok SSH
+    #  id: ngrok
+    #  uses: tmshkr/ngrok-ssh@latest
+    #  with:
+    #    SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+    #    NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
+
+    - name: Run ngrok to forward port
+      run: |
+        ngrok http http://localhost:8080 &
+        sleep 15
+        curl http://localhost:4040/api/tunnels
 
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -49,16 +62,6 @@ jobs:
         docker restart `docker ps -q --filter ancestor=tomcat`
       env:
         SQLPASSWORD: ${{ secrets.SQLPASSWORD }}
-
-    #- name: Run ngrok SSH
-    #  id: ngrok
-    #  uses: tmshkr/ngrok-ssh@latest
-    #  with:
-    #    SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
-    #    NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
-
-    - name: Run ngrok to forward port
-      run: ngrok http --region=ap http://localhost:8080 &
 
     - name: Create database
       run: | 
