--- a/.gitignore
+++ b/.gitignore
@@ -24,12 +24,12 @@ replay_pid*
 temp.sql
 
 # NetBeans specific #
-nbproject/private/
-build/
-nbbuild/
-nbdist/
-nbactions.xml
-nb-configuration.xml
+server/tomcat/nbproject/private/
+server/tomcat/build/
+server/tomcat/nbbuild/
+server/tomcat/nbdist/
+server/tomcat/nbactions.xml
+server/tomcat/nb-configuration.xml
 
 # Class Files #
 *.class
