--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -74,9 +74,9 @@ jobs:
 
     - name: Reverse proxy with serveo
       run: |
-        echo ${{ secrets.SERVEO_KEY }} > ~/.ssh/id_ed25519
-        echo ${{ secrets.SERVEO_PUBLIC_KEY }} > ~/.ssh/id_ed25519.pub
-        echo ${{ secrets.SERVEO_HOST}} > ~/.ssh/known_hosts
+        echo "${{ secrets.SERVEO_KEY }}" > ~/.ssh/id_ed25519
+        echo "${{ secrets.SERVEO_PUBLIC_KEY }}" > ~/.ssh/id_ed25519.pub
+        echo "${{ secrets.SERVEO_HOST}}" > ~/.ssh/known_hosts
         ssh -R choice.themajorones.dev:80:localhost:8080 serveo.net &
 
     - name: Show tomcat Logs
