--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -74,6 +74,7 @@ jobs:
 
     - name: Reverse proxy with serveo
       run: |
+        mkdir -p ~/.ssh
         touch ~/.ssh/known_hosts
         touch ~/.ssh/id_ed25519
         touch ~/.ssh/id_ed25519.pub
