--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on: 
   workflow_dispatch:
-  push:
+  #push:
   #pull_request:
 
 jobs:
@@ -71,7 +71,7 @@ jobs:
         echo "inserting data"
         sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/insert.sql
 
-    - name: Reverse proxy with serveo
+    - name: Reverse proxy
       run: |
         mkdir -p ~/.ssh
         touch ~/.ssh/known_hosts
