--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -20,6 +20,14 @@
         <servlet-name>LoginGoogleServlet</servlet-name>
         <servlet-class>control.LoginGoogleServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Profile</servlet-name>
+        <servlet-class>control.Profile</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Editprofile</servlet-name>
+        <servlet-class>control.Editprofile</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -47,5 +55,13 @@
     <servlet-mapping>
         <servlet-name>LoginGoogleServlet</servlet-name>
         <url-pattern>/LoginGoogleServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Profile</servlet-name>
+        <url-pattern>/profile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Editprofile</servlet-name>
+        <url-pattern>/editprofile</url-pattern>
     </servlet-mapping>
 </web-app>
