--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -20,6 +20,22 @@
         <servlet-name>LoginGoogleServlet</servlet-name>
         <servlet-class>control.LoginGoogleServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CPUController</servlet-name>
+        <servlet-class>Controller.CPUController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>manage</servlet-name>
+        <servlet-class>Controller.manage</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CaseController</servlet-name>
+        <servlet-class>Controller.CaseController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DAOGPU</servlet-name>
+        <servlet-class>DAO.DAOGPU</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -47,5 +63,17 @@
     <servlet-mapping>
         <servlet-name>LoginGoogleServlet</servlet-name>
         <url-pattern>/LoginGoogleServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CPUController</servlet-name>
+        <url-pattern>/cpu</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>manage</servlet-name>
+        <url-pattern>/manage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CaseController</servlet-name>
+        <url-pattern>/cases</url-pattern>
     </servlet-mapping>
 </web-app>
