--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>EditProfile</servlet-name>
         <servlet-class>control.profile.EditProfile</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LoginEmployee</servlet-name>
+        <servlet-class>com.edit.LoginEmployee</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -63,5 +67,9 @@
     <servlet-mapping>
         <servlet-name>EditProfile</servlet-name>
         <url-pattern>/editprofile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginEmployee</servlet-name>
+        <url-pattern>/loginemployee</url-pattern>
     </servlet-mapping>
 </web-app>
