--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -40,6 +40,14 @@
         <servlet-name>CartServlet</servlet-name>
         <servlet-class>packages.wrap.CartServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManagerAccount</servlet-name>
+        <servlet-class>control.account.ManagerAccount</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateProfile</servlet-name>
+        <servlet-class>control.account.UpdateProfile</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -79,5 +87,13 @@
     <servlet-mapping>
         <servlet-name>OrderServlet</servlet-name>
         <url-pattern>/order</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerAccount</servlet-name>
+        <url-pattern>/manageraccount</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateProfile</servlet-name>
+        <url-pattern>/updateprofile</url-pattern>
     </servlet-mapping>
 </web-app>
