--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <!--Authentication-->
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>control.auth.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerAccount</servlet-name>
+        <servlet-class>control.account.ManagerAccount</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateUserProfile</servlet-name>
+        <servlet-class>control.account.UpdateUserProfile</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
@@ -44,7 +49,6 @@
         <servlet-name>LoginGoogleServlet</servlet-name>
         <url-pattern>/auth/googleLogin</url-pattern>
     </servlet-mapping>
-
     <!--Profile-->
     <servlet>
         <servlet-name>Profile</servlet-name>
@@ -62,7 +66,6 @@
         <servlet-name>EditProfile</servlet-name>
         <servlet-class>control.profile.EditProfile</servlet-class>
     </servlet>
-
     <!--Product-->
     <servlet>
         <servlet-name>OrderServlet</servlet-name>
@@ -87,5 +90,13 @@
     <servlet-mapping>
         <servlet-name>OrderServlet</servlet-name>
         <url-pattern>/order</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerAccount</servlet-name>
+        <url-pattern>/manage/profile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateUserProfile</servlet-name>
+        <url-pattern>/manage/profile/user</url-pattern>
     </servlet-mapping>
 </web-app>
