--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -100,6 +100,10 @@
         <url-pattern>/order</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>OrderServlet</servlet-name>
+        <url-pattern>/manage/order</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>ManageAccount</servlet-name>
         <url-pattern>/manage/profile</url-pattern>
     </servlet-mapping>
