--- a/.github/workflows/start-server.yml
+++ b/.github/workflows/start-server.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on: 
   workflow_dispatch:
-  # push:
+  #push:
   #pull_request:
 
 jobs:
@@ -19,13 +19,23 @@ jobs:
         curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc \
         | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null \
         && echo "deb https://ngrok-agent.s3.amazonaws.com buster main" \
-        | sudo tee /etc/apt/sources.list.d/ngrok.list \
-        && sudo apt update \
-        && sudo apt install ngrok
+        | sudo tee /etc/apt/sources.list.d/ngrok.list
+        curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
+        echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
+        sudo apt update 
+        sudo apt install ngrok cloudflare-warp
         ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
+        warp-cli --accept-tos connect
 
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    #- name: Run ngrok SSH
+    #  id: ngrok
+    #  uses: tmshkr/ngrok-ssh@latest
+    #  with:
+    #    SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+    #    NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
 
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
@@ -43,22 +53,12 @@ jobs:
         
     - name: Run Tomcat container
       run: |
-        docker run --network host -d --name tomcat -p 8080:8080 -e "SQLPASSWORD=${{ secrets.SQLPASSWORD }}" -e "EMAIL_ADDRESS=${{ secrets.EMAIL_ADDRESS }}" -e "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" tomcat:latest
+        docker run --network host -d --name tomcat -p 8080:8080 -e "SQLPASSWORD=${{ secrets.SQLPASSWORD }}" -e "EMAIL_ADDRESS=${{ secrets.EMAIL_ADDRESS }}" -e "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" -e "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" tomcat:latest
         mv ./server/tomcat/dist/*.war ./server/tomcat/dist/ROOT.war
         docker cp ./server/tomcat/dist/ROOT.war `docker ps -q --filter ancestor=tomcat`:/usr/local/tomcat/webapps/
         docker restart `docker ps -q --filter ancestor=tomcat`
       env:
         SQLPASSWORD: ${{ secrets.SQLPASSWORD }}
-
-    #- name: Run ngrok SSH
-    #  id: ngrok
-    #  uses: tmshkr/ngrok-ssh@latest
-    #  with:
-    #    SSH_CLIENT_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
-    #    NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
-
-    - name: Run ngrok to forward port
-      run: ngrok http --region=ap http://localhost:8080 &
 
     - name: Create database
       run: | 
@@ -71,5 +71,17 @@ jobs:
         echo "inserting data"
         sqlcmd -S localhost -d major -U sa -P ${{ secrets.SQLPASSWORD }} -i ./server/mssql/insert.sql
 
+    - name: Reverse proxy
+      run: |
+        mkdir -p ~/.ssh
+        touch ~/.ssh/known_hosts
+        touch ~/.ssh/id_ed25519
+        touch ~/.ssh/id_ed25519.pub
+        echo "${{ secrets.SERVEO_KEY }}" > ~/.ssh/id_ed25519
+        echo "${{ secrets.SERVEO_PUBLIC_KEY }}" > ~/.ssh/id_ed25519.pub
+        echo "${{ secrets.SERVEO_HOST}}" > ~/.ssh/known_hosts
+        ssh -R choice.themajorones.dev:80:localhost:8080 serveo.net &
+
     - name: Show tomcat Logs
+      timeout-minutes: 60
       run: docker logs -f `docker ps -q --filter ancestor=tomcat`
